--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,7 +12,7 @@
 /// @link   http://sass-guidelin.es/#main-file
 ////
 
-@import "~bourbon";
+@import "../../node_modules/bourbon/core/bourbon";
 @import "settings/_index";
 @import "tools/_index";
 @import "generic/_index";
