--- a/assets/scss/plugins/woocommerce/__index.scss
+++ b/assets/scss/plugins/woocommerce/__index.scss
@@ -1,7 +1,7 @@
 ////
 /// WooCommerce specific styles.
 ///
-/// @group  Vendor
+/// @group  Plugins
 /// @author Lee Anthony <seothemeswp@gmail.com>
 /// @link   https://github.com/seothemes/genesis-starter-theme
 ////
