--- a/assets/scss/base/_heading.scss
+++ b/assets/scss/base/_heading.scss
@@ -6,9 +6,7 @@
 /// @link   https://github.com/seothemes/genesis-starter-theme
 ////
 
-
-
-#{$all-headings} {
+h1, h2, h3, h4, h5, h6 {
 
 	@include heading;
 }
