--- a/assets/scss/layout/__index.scss
+++ b/assets/scss/layout/__index.scss
@@ -1,16 +1,19 @@
 ////
-/// Object imports.
+/// Layout imports.
 ///
 /// The `objects/` folder contains everything that takes part in laying out
 /// the site or application. This folder could have stylesheets for the
 /// main parts of the site (header, footer, navigation, sidebar etc).
 ///
-/// @group  Objects
+/// @group  Layout
 /// @author Lee Anthony <seothemeswp@gmail.com>
 /// @link   https://seothemes.com/themes/genesis-starter-theme
 ////
 
-@import "site-container";
-@import "site-header";
-@import "site-inner";
-@import "site-footer";
+@import "container";
+@import "wrap";
+@import "header";
+@import "inner";
+@import "content";
+@import "sidebar";
+@import "footer";
