--- a/assets/scss/themes/business-pro/editor.scss
+++ b/assets/scss/themes/business-pro/editor.scss
@@ -10,10 +10,10 @@
 /// @link   http://sass-guidelin.es/#main-file
 ////
 
-@import "../../node_modules/bourbon/core/bourbon";
-@import "settings/_index";
-@import "tools/_index";
-@import "components/block";
+@import "../../../../node_modules/bourbon/core/bourbon";
+@import "variables";
+@import "../../abstracts/_index";
+@import "../../components/block";
 
 .editor-post-title__block .editor-post-title__input,
 body {
