--- a/assets/scss/plugins/__index.scss
+++ b/assets/scss/plugins/__index.scss
@@ -8,6 +8,7 @@
 /// @link   https://seothemes.com/themes/genesis-starter-theme
 ////
 
-@import "gravity-forms/_index";
-@import "atomic-blocks/_index";
+@import "gravity-forms";
+@import "atomic-blocks";
+@import "simple-social-icons";
 @import "woocommerce/_index";
