--- a/assets/scss/plugins/_gravity-forms.scss
+++ b/assets/scss/plugins/_gravity-forms.scss
@@ -1,5 +1,10 @@
-/* ## Gravity Forms
---------------------------------------------- */
+////
+/// Gravity forms.
+///
+/// @group  Plugins
+/// @author Lee Anthony <seothemeswp@gmail.com>
+/// @link   https://seothemes.com/themes/genesis-starter-theme
+////
 
 .gform_heading,
 .gform_body,
