--- a/assets/scss/utilities/__index.scss
+++ b/assets/scss/utilities/__index.scss
@@ -12,9 +12,10 @@
 
 @import "accessibility";
 @import "gutenberg";
-@import "alignment";
 @import "grid";
+@import "alignment";
 @import "spacing";
 @import "misc";
 @import "wordpress";
+@import "images";
 @import "print";
