--- a/assets/scss/components/_featured-content.scss
+++ b/assets/scss/components/_featured-content.scss
@@ -9,6 +9,16 @@
 .featured-content {
 	margin-bottom: $spacing--m;
 
+	.widget-wrap {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	.widget-title {
+		width: 100%;
+	}
+
 	.entry {
 
 		> a {
@@ -16,6 +26,7 @@
 
 			img {
 				min-width: 100%;
+				border-radius: $base--border--radius $base--border--radius 0 0;
 			}
 		}
 
