--- a/assets/scss/components/_front-page.scss
+++ b/assets/scss/components/_front-page.scss
@@ -6,6 +6,14 @@
 /// @link   https://github.com/seothemes/genesis-starter-theme
 ////
 
+$front-page-widget-area__padding--desktop: $spacing--xxl !default;
+$front-page-widget-area__border-bottom: $base--border !default;
+$front-page-1__spacing--desktop: $spacing--xxxl !default;
+$front-page-3__background-color: transparent !default;
+$front-page-4__padding--desktop: $front-page-widget-area__padding--desktop !default;
+$front-page-5__background-color: $color--background !default;
+$front-page-6__background-color: $color--background !default;
+
 [src*="placeholder.com"] {
 	padding: $spacing--xxs;
 	border: $base--border;
@@ -13,12 +21,13 @@
 }
 
 [class*="front-page-"] {
+	position: relative;
 	width: 100%;
 	padding: $spacing--xl 0 $spacing--xl - $gutter;
-	border-bottom: $base--border;
+	border-bottom: $front-page-widget-area__border-bottom;
 
 	@include mq(m) {
-		padding: $spacing--xxl 0 $spacing--xxl - $gutter;
+		padding: $front-page-widget-area__padding--desktop 0 $front-page-widget-area__padding--desktop - $gutter;
 	}
 
 	&:last-of-type {
@@ -32,12 +41,28 @@
 		padding: $spacing--xxl 0 $spacing--xxl - $gap;
 
 		@include mq(m) {
-			padding: $front-page-1__spacing--desktop;
+
+			@include padding($front-page-1__spacing--desktop 0 $front-page-1__spacing--desktop - $gap);
+		}
+	}
+
+	&-3 {
+		background-color: $front-page-3__background-color;
+	}
+
+	&-4 {
+
+		@include mq(m) {
+			padding: $front-page-4__padding--desktop 0 $front-page-4__padding--desktop - $gutter
 		}
 	}
 
 	&-5 {
 		padding: $spacing--xl 0 $spacing--xl - $gutter;
-		background-color: $color--background;
+		background-color: $front-page-5__background-color;
+	}
+
+	&-6 {
+		background-color: $front-page-6__background-color;
 	}
 }
